# ublox-driver

./: .gitignore  CMakeLists.txt  README.md  config.json  libs.repos
cmake/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake
include/: Driver.hpp  DriverHelpers.hpp
include/ublox/: ConfigI2CPacket.hpp  ConfigMessageRatePacket.hpp  ConfigPortPacket.hpp  ConfigSPIPacket.hpp  ConfigUARTPacket.hpp  ConfigUSBPacket.hpp  Device.hpp  Packet.hpp  Registers.hpp
include/ublox/packet/: Base.hpp  ConfigI2CPacket.hpp  ConfigMessageRatePacket.hpp  ConfigPortPacket.hpp  ConfigSPIPacket.hpp  ConfigUARTPacket.hpp  ConfigUSBPacket.hpp  Configuration.hpp  Monitor.hpp  MonitorReceiverAndSoftwareVersionPacket.hpp  NavPositionECEFPakcet.hpp  NavPositionLLHPakcet.hpp  Navigation.hpp  Packet.hpp  Receiver.hpp
include/util/: RingBuffer.hpp  Serde.hpp  Serial.hpp  Traits.h  Utils.hpp
libs/: .gitignore  CMakeLists.txt
src/: Driver.cpp  DriverHelpers.cpp  main.cpp
src/ublox/: Device.cpp
src/util/: Serial.cpp
test/: CMakeLists.txt  packetParsing.cpp
test/util/: CMakeLists.txt  ringBufferTests.cpp  serdeTests.cpp  serialTests.cpp  traitTests.cpp  utilsSerializationTest.cpp
